erDiagram
    USER ||--o{ NOTIFICATION : "receives"
    USER ||--o| STUDENT : "specializes"
    USER ||--o| STAFF : "specializes"
    USER ||--o{ AUTH_TOKEN : "has"
    USER ||--o{ OTP_RECORD : "has"
    
    STAFF ||--o{ EVALUATION : "performs"
    STAFF }|--|| DEPARTMENT : "belongs_to"
    
    STUDENT ||--o{ TRANSFER_APPLICATION : "submits"
    
    TRANSFER_APPLICATION ||--o{ DOCUMENT : "includes"
    TRANSFER_APPLICATION ||--|| EVALUATION : "receives"
    TRANSFER_APPLICATION ||--o{ AUDIT_LOG : "tracked_by"
    TRANSFER_APPLICATION ||--o{ INTIBAK_RECORD : "generates"
    TRANSFER_APPLICATION ||--o| PROFICIENCY_RECORD : "verified_by"
    TRANSFER_APPLICATION ||--o| BOARD_DECISION : "finalized_by"
    
    NOTIFICATION {
        int notification_id PK
        int user_id FK
        int cycle_id
        string message
        string status "Sent, Failed"
        datetime sent_at
    }

    INTIBAK_RECORD {
        int intibak_id PK
        int application_id FK
        string source_course 
        string target_course 
        int credits
        string approval_status
    }

    USER {
        int user_id PK
        string email
        string password_hash
        datetime last_login_date
    }

    STUDENT {
        int student_id PK
        int user_id FK
        string tckn
        string first_name
        string last_name
        string phone_number
        datetime date_of_birth
        float gpa
        string current_university
        string current_department
        boolean is_active
        datetime kvkk_accepted_at
    }

    STAFF {
        int staff_id PK
        int user_id FK
        int department_id FK
        string staff_type "OIDB, YDYO, YGK, DEAN, FACULTY"
    }

    DEPARTMENT {
        int department_id PK
        string department_name
        
    }

    TRANSFER_APPLICATION {
        int application_id PK
        int student_id FK
        int cycle_id
        string target_department
        string status "Pending, Forwarded_to_YDYO, Approved_by_YDYO, Forwarded_to_Faculty, Rejected, Approved_by_YGK, Rejected_by_YGK, Rejected_by_YDYO, Finalized, Correction_Requested "
        datetime created_at
    }

    PROFICIENCY_RECORD {
        int record_id PK
        int application_id FK
        string document_approval_status "Onaylandı, Onaylanmadı"
        string exam_result "Sınav Gerekli Değil, Sınav Sonucu Bekleniyor, Sınav Başarısız"
        string exemption_status "Muaf, Muaf Degil, Beklemede"
        string explanation_note
    }

    EVALUATION {
        int evaluation_id PK
        int application_id FK
        int evaluator_id FK
        float score
        string comments
        datetime evaluation_date
    }

    DOCUMENT {
        int document_id PK
        int application_id FK
        string document_name
        string doc_type
        string file_path
        boolean is_locked
    }

    BOARD_DECISION {
        int decision_id PK
        int application_id FK
        int cycleId
        string decisionType
        string rejection_code
        datetime decision_date
    }

    AUTH_TOKEN {
        string token_id PK
        int user_id FK
        datetime expiry_date
        boolean is_valid
    }

    OTP_RECORD {
        int otp_id PK
        int user_id FK
        string otp_code
        int failed_attempts
        datetime expiry_time
    }

    AUDIT_LOG {
        int log_id PK
        int application_id FK
        int user_id FK
        string action "Routed to Faculty, Rejected, etc."
        datetime timestamp
    }
